Adding first set of tests.